...

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
...

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                        <LinearLayout
                            android:id="@+id/addExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                            <LinearLayout
                                android:id="@+id/linearLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <EditText
                                    android:id="@+id/expenseText"
                                    android:layout_width="100dp"
                                    android:layout_height="wrap_content"
...

                            <LinearLayout
                                android:id="@+id/linearLayout2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <Spinner
                                    android:id="@+id/descriptionCombo"
                                    android:layout_width="143dp"
                                    android:layout_height="wrap_content"
...

                            <LinearLayout
                                android:id="@+id/linearLayout3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <EditText
                                    android:id="@+id/dateText"
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
...

                            <Button
                                android:id="@+id/saveButton"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
...

                            <LinearLayout
                                android:id="@+id/linearLayout4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <EditText
                                    android:id="@+id/incomeField"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
...

                        <LinearLayout
                            android:id="@+id/ChartExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...
                                android:layout_height="40dp"
                                android:text="@string/pie_chart"
                                android:id="@+id/chartButton"
                                android:background="@drawable/buttonschartstyle"
                                android:layout_gravity="center_horizontal"
...
