<resources>
    <string name="app_name">ManageXPence</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="removeAds">Remove Ads</string>
    <string name="descriptions">House Rent,Shopping,SuperMarket,Travel,Mortgage,Council Tax,House Bills,Entertainment</string>

    <string-array name="descriptions">
        <item>House Rent</item>
...
    <string name="_0">0</string>
    <string name="warning_set_on">Warning set on:</string>
    <string name="your_current_budget_warning_is">Your current Budget Warning is:</string>
    <string name="select_an_expense_and_year">Select an Expense and Year</string>
    <string name="calculate">Calculate</string>
    <string name="month">Month:</string>
    <string name="or">% or £</string>
    <string name="pound">£</string>
    <string name="percent">%</string>
    <string name="search_by_description">Search by Description</string>
    <string name="enter_description"><font size="14">Enter description</font></string>
    <string name="enter_amount"><font size="14">Enter amount</font></string>
    <string name="search">Search</string>
...
    <string name="add_an_expense">Add an Expense:</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_description">Description</string>
    <string name="add">Add</string>
    <string name="select_date">Select Date</string>
    <string name="end_date">End Date</string>
    <string name="save_to_file">Save To File</string>
    <string name="add_your_income">Add your income:</string>
    <string name="enter_your_income">Enter your income:</string>
    <string name="income_circle">Income Circle</string>
    <string name="balance">Balance:</string>
    <string name="edit_an_expense">Edit an expense:</string>
    <string name="add_expenses_using_date_range">Add expenses using date range:</string>
...
    <string name="budget_warnings">Budget Warnings:</string>
    <string name="budget_control">Budget Control</string>
    <string name="backup">BackUp:</string>
    <string name="export">Export</string>
    <string name="importexpenses">Import</string>
    <string name="show_a_pie_chart_with_your_expenses">Show a Pie Chart with your Expenses:</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="show_a_barchart_with_your_expenses">Show a BarChart with your Expenses:</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="show_an_annual_chart_with_your_expenses">Show an Annual Chart with your Expenses:</string>
    <string name="annual_chart">Annual Chart</string>
    <string name="show_a_savings_chart">Show a Savings Chart:</string>
    <string name="savings_chart">Savings Chart</string>
...
