...
    <FrameLayout
        android:id="@+id/chartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/arrowRight">

    </FrameLayout>

    <ImageButton
        android:id="@+id/arrowLeft"
        android:layout_width="40dp"
...
        tools:ignore="contentDescription" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
...
